filtros vista prendas

--- a/src/app/components/informe-categoria/informe-categoria.component.html
+++ b/src/app/components/informe-categoria/informe-categoria.component.html
@@ -632,7 +632,7 @@
             <td data-label="Talla"> {{i.talla}} </td>
             <td data-label="Talla"> {{i.tallasAgotadas}} </td>
             <td data-label="Precio"> {{i.precio}} </td>
-            <td data-label="Descuento"> {{i.descuento !== null ? i.descuento : 0}} </td>
+            <td data-label="Descuento"> {{descuentoTable2}} </td>
           </tr>
         </tbody>
       </table>
