Se crean los componentes de productos con sus rutas

--- a/src/app/components/informes/informes.component.html
+++ b/src/app/components/informes/informes.component.html
@@ -46,6 +46,26 @@
                 <a routerLink="/informeCategoria" class="sel2">Prendas</a>
               </li>
             </ul>
+            <ul class="collapse list-unstyled itemlist" id="colectionSubmenu">
+              <li class="list-items-container">
+                <a class="sel2" routerLink="../productos/general" routerLinkActive="activo">General</a>
+              </li>
+            </ul>
+            <ul class="collapse list-unstyled itemlist" id="colectionSubmenu">
+              <li class="list-items-container">
+                <a class="sel2" routerLink="../productos/informeCatMujer" routerLinkActive="activo">Categoria mujeres</a>
+              </li>
+            </ul>
+            <ul class="collapse list-unstyled itemlist" id="colectionSubmenu">
+              <li class="list-items-container">
+                <a class="sel2" routerLink="../productos/informeCatHombre" routerLinkActive="activo">Categoria hombres</a>
+              </li>
+            </ul>
+            <ul class="collapse list-unstyled itemlist" id="colectionSubmenu">
+              <li class="list-items-container">
+                <a class="sel2" routerLink="../productos/informeCatKids" routerLinkActive="activo">Categoria kids</a>
+              </li>
+            </ul>
           </li>
         </ul>
       </div>
