--- a/src/app/components/informe-categoria/informe-categoria.component.html
+++ b/src/app/components/informe-categoria/informe-categoria.component.html
@@ -1,4 +1,3 @@
-
 <!-- siderbar -->
 <div class="d-flex" id="wrapper">
   <!-- Sidebar -->
@@ -6,7 +5,7 @@
     <div class="menu-container">
       <div class="list-group">
         <ul class="list-unstyled components mb-5">
-        
+
           <li class="active">
             <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="sel1">
               <img src="./assets/rect.png" alt="" class="imgsel material-icons" />Comparativos<img
@@ -51,6 +50,28 @@
                 <a routerLink="/informeCategoria" class="sel2">Prendas</a>
               </li>
             </ul>
+            <ul class="collapse list-unstyled itemlist" id="colectionSubmenu">
+              <li class="list-items-container">
+                <a class="sel2" routerLink="../productos/general" routerLinkActive="activo">General</a>
+              </li>
+            </ul>
+            <ul class="collapse list-unstyled itemlist" id="colectionSubmenu">
+              <li class="list-items-container">
+                <a class="sel2" routerLink="../productos/informeCatMujer" routerLinkActive="activo">Categoria
+                  mujeres</a>
+              </li>
+            </ul>
+            <ul class="collapse list-unstyled itemlist" id="colectionSubmenu">
+              <li class="list-items-container">
+                <a class="sel2" routerLink="../productos/informeCatHombre" routerLinkActive="activo">Categoria
+                  hombres</a>
+              </li>
+            </ul>
+            <ul class="collapse list-unstyled itemlist" id="colectionSubmenu">
+              <li class="list-items-container">
+                <a class="sel2" routerLink="../productos/informeCatKids" routerLinkActive="activo">Categoria kids</a>
+              </li>
+            </ul>
           </li>
         </ul>
       </div>
@@ -67,12 +88,12 @@
     </div>
   </div>
   <!-- fin boton ocultar -->
-  
+
   <div class="container-cards mt-3 ml-3 mr-2">
     <div class="input-grid1">
       <div class="flex-auto">
         <h1 class="titulo-h1">Resumen Mes</h1>
-        
+
         <input id="date1" type="date" class="mr-3" />
 
         <!-- filtro de las cards -->
@@ -96,12 +117,13 @@
         </div>
         <div class="modal-body">
           <ul class="list-unstyled components">
-  
+
             <li class="active">
-              <a href="#filterMArk" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle menu-color">Marca
+              <a href="#filterMArk" data-toggle="collapse" aria-expanded="false"
+                class="dropdown-toggle menu-color">Marca
               </a>
               <ul class="collapse list-unstyled" id="filterMArk">
-  
+
                 <li *ngFor="let origin of originData">
                   <label class="control control--checkbox">
                     <input class="marcaCards" type="checkbox" value="{{origin.value}}" name="{{origin.value}}"
@@ -112,7 +134,7 @@
                 </li>
               </ul>
             </li>
-  
+
             <li class="active mt-2">
               <a href="#filterCategory" data-toggle="collapse" aria-expanded="false"
                 class="dropdown-toggle menu-color">Categoria
@@ -128,7 +150,7 @@
                 </li>
               </ul>
             </li>
-  
+
             <li class="active mt-2">
               <a href="#filterSubCategory" data-toggle="collapse" aria-expanded="false"
                 class="dropdown-toggle menu-color">Sub categoría
@@ -136,8 +158,9 @@
               <ul class="collapse list-unstyled" id="filterSubCategory">
                 <li *ngFor="let subcategory of subCategoryData">
                   <label class="control control--checkbox">
-  
-                    <input class="subCategoriaCards" type="checkbox" value="{{subcategory.value}}" name="{{subcategory.value}}"
+
+                    <input class="subCategoriaCards" type="checkbox" value="{{subcategory.value}}"
+                      name="{{subcategory.value}}"
                       (change)="validateCheckFilter($event.target.checked, subcategory, $event.target.className, $event.target)"
                       id="{{subcategory.value}}" />
                     {{subcategory.text}}
@@ -145,7 +168,7 @@
                 </li>
               </ul>
             </li>
-  
+
             <li class="active mt-2">
               <a href="#filterTipoPrenda" data-toggle="collapse" aria-expanded="false"
                 class="dropdown-toggle menu-color">Tipo de prenda
@@ -154,7 +177,8 @@
                 <div class="overflow-auto container-scroll">
                   <li *ngFor="let tipoprenda of tipoPrendaData">
                     <label class="control control--checkbox">
-                      <input class="tipoPrendaCards" type="checkbox" value="{{tipoprenda.value}}" name="{{tipoprenda.value}}"
+                      <input class="tipoPrendaCards" type="checkbox" value="{{tipoprenda.value}}"
+                        name="{{tipoprenda.value}}"
                         (change)="validateCheckFilter($event.target.checked, tipoprenda, $event.target.className, $event.target)"
                         id="{{tipoprenda.value}}" />
                       {{tipoprenda.text}}
@@ -163,9 +187,10 @@
                 </div>
               </ul>
             </li>
-  
+
             <li class="active mt-2">
-              <a href="#filterColor" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle menu-color">Color
+              <a href="#filterColor" data-toggle="collapse" aria-expanded="false"
+                class="dropdown-toggle menu-color">Color
               </a>
               <ul class="collapse list-unstyled" id="filterColor">
                 <div class="overflow-auto container-scroll">
@@ -180,7 +205,7 @@
                 </div>
               </ul>
             </li>
-  
+
             <li class="active mt-2">
               <a href="#filterMaterials" data-toggle="collapse" aria-expanded="false"
                 class="dropdown-toggle menu-color">Composición
@@ -195,7 +220,7 @@
                 </div>
               </ul>
             </li>
-  
+
           </ul>
         </div>
         <div class="modal-footer">
@@ -205,7 +230,7 @@
       </ng-template>
       <div class="item-filters-top">
         <div *ngFor="let filterCards of selectedFilterCards" class="content-filter-item">
-            <p class="item-filter">{{filterCards.item}}</p>
+          <p class="item-filter">{{filterCards.item}}</p>
         </div>
       </div>
     </div>
