Maquetado vista general

--- a/src/app/components/informe-categoria/informe-categoria.component.html
+++ b/src/app/components/informe-categoria/informe-categoria.component.html
@@ -92,7 +92,7 @@
   <div class="container-cards mt-3 ml-3 mr-2">
     <div class="input-grid1">
       <div class="flex-auto">
-        <h1 class="titulo-h1">Resumen Mes</h1>
+        <h1 class="titulo-h1">Categorías</h1>
 
         <input id="date1" type="date" class="mr-3" />
 
