--- a/src/app/components/informe-categoria/table2/table2.component.html
+++ b/src/app/components/informe-categoria/table2/table2.component.html
@@ -1,6 +1,6 @@
 <!-- tabla productos -->
       <div class="filterTable">
-        <h2>Tipo de prenda</h2>
+        <h2>Productos</h2>
         <svg xmlns="http://www.w3.org/2000/svg" (click)="openModal2(template2)" width="17" heigth="17"
           xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
           viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify" style="fill:#358da3 " role="img"
