--- a/src/app/components/productos/general/general.component.css
+++ b/src/app/components/productos/general/general.component.css
@@ -2,6 +2,7 @@
   cursor: pointer;
 }
 
+/* Filtros aplicados en pantalla */
 .item-filters-top {
   display: flex;
   flex-wrap: wrap;
@@ -26,7 +27,10 @@
   font-weight: bold;
   color: white;
 }
+/* Filtros aplicados en pantalla */
 
+
+/* Estilos para el modal */
 .menu-color {
   color: #212121;
   font-weight: bold;
@@ -35,39 +39,141 @@
 .container-scroll {
   height: 250px;
 }
+/* Estilos para el modal */
 
-.container-top {
-  width: 100%;
-  padding: 0 10px;
-}
 
-/* sistema grid para organizar la parte superior (resumen, lista, date) */
+/* sistema grid para organizar la parte superior (resumen, select, date) */
 .grid {
   display: grid;
-  grid-template-columns: 60% 15% 25%;
+  grid-template-columns: 70% 13% 0%;
 }
 
 .input-grid1 {
   display: grid;
-  grid-template-columns: 80% 10%;
+  grid-template-columns: 100% 100% 0%;
   gap: 10%;
   align-items: start;
 }
 
-#date1 {
-  border: none;
-  border-radius: 5%;
-  background-color: #f1f1f1;
-  padding: 0 0 0.5rem 0.4rem;
+.container-top {
+  width: 100%;
 }
 
-.titulo-h1 {
-  padding-left: 1rem;
+.selectTop {
+  margin-top: -20px;
+  margin-right: 20px;
+}
+
+.prueba {
+  background-color: #212121;
+  width: 100%;
+  height: 500px;
 }
 
 @media screen and (max-width: 600px) {
   .grid {
     display: grid;
-    grid-template-columns: 40% 30% 30%;
+    grid-template-columns: 40% 25% 0%;
   }
+}
+
+/*CSS GRID*/
+.grid-container {
+  display: grid;
+  gap: 5px;
+  width: 100%;
+  height: 1000px;
+  grid-template-columns: 75% 25%;
+  margin-bottom: 20px;
+}
+
+.grid-container-item1 {
+  display: grid;
+  grid-template-columns: 50% 50%;
+}
+
+.item1 {
+  border-radius: 8px;
+}
+
+.item2 {
+  background-color: darkviolet;
+  border-radius: 8px;
+}
+
+.item3 {
+  background-color: #358da3;
+  border-radius: 8px;
+}
+
+.item4 {
+  background-color: coral;
+  border-radius: 8px;
+  margin-right: 12px;
+  grid-area: 1 / 2 / 4 / 4;
+}
+
+.item1-1 {
+  background-color: #212121;
+  border-radius: 8px;
+}
+
+.item1-2 {
+  background-color: aqua;
+  border-radius: 8px;
+}
+
+@media screen and (max-width: 1000px) {
+  .grid-container {
+    display: block;
+  }
+
+  .grid-container-item1 {
+    display: block;
+  }
+
+  .item1 {
+    width: 100%;
+    height: auto;
+    margin-bottom: 0px;
+  }
+
+  .item2 {
+    width: 100%;
+    height: auto;
+  }
+
+  .item3 {
+    width: 100%;
+    height: auto;
+  }
+
+  .item4 {
+    width: 100%;
+    height: auto;
+  }
+}
+
+
+/* clases del routing */
+.activo {
+  background-color: #c4e3eb;
+  color: black;
+
+}
+
+a.sel2.activo {
+  background-color: transparent;
+  color: #358da3;
+}
+
+a.sel2.activo::before {
+  content: " ";
+  position: absolute;
+  margin-top: 2.5px;
+  left: 30px;
+  width: 0.9rem;
+  height: 0.9rem;
+  border-radius: 50%;
+  background: #358da3;
 }
