--- a/src/app/components/productos/general/general.component.html
+++ b/src/app/components/productos/general/general.component.html
@@ -6,15 +6,15 @@
         </div>
 
         <div class="input-grid1">
-            <input id="date1" type="date" />
+            <input type="date">
+            <input type="date">
 
-            <svg xmlns="http://www.w3.org/2000/svg" width="17" heigth="17"
-                xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
-                viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify" style="fill:#358da3 " role="img"
-                aria-label="Illustration of a Funnel" class="hoverSvgFilter">
+            <svg xmlns="http://www.w3.org/2000/svg" width="17" heigth="17" xmlns:xlink="http://www.w3.org/1999/xlink"
+                preserveAspectRatio="xMidYMid meet" version="1.0" viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify"
+                style="fill:#358da3 " role="img" aria-label="Illustration of a Funnel" class="hoverSvgFilter">
                 <g id="__id33_ssutzzo1g">
-                    <path d="m350 144.09h180v20l-70 90v100l-40-20v-80l-70-90v-20"
-                        transform="translate(-350 -144.09)" style="fill: inherit"></path>
+                    <path d="m350 144.09h180v20l-70 90v100l-40-20v-80l-70-90v-20" transform="translate(-350 -144.09)"
+                        style="fill: inherit"></path>
                 </g>
             </svg>
             <br>
@@ -145,7 +145,28 @@
                     <button type="button" class="btn btn-primary" (click)="closeModal()">Cerrar</button>
                 </div>
             </ng-template>
-
         </div>
+    </div>
+</div>
+
+<div class="grid-container">
+    <div class="item1 grid-container-item1">
+        <div class="item1-1">
+            <h2>Categorías</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci, hic minima. Voluptatem, delectus dolores assumenda quisquam deleniti aspernatur architecto, mollitia repudiandae explicabo beatae iusto dolor distinctio alias molestiae, porro ex?</p>
+        </div>
+        <div class="item1-2">
+            <h2>Sub-Categorías</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci, hic minima. Voluptatem, delectus dolores assumenda quisquam deleniti aspernatur architecto, mollitia repudiandae explicabo beatae iusto dolor distinctio alias molestiae, porro ex?</p>
+        </div>
+    </div>
+    <div class="item2">
+        <h2>Colores</h2>
+    </div>
+    <div class="item3">
+        <h2>Materiales</h2>
+    </div>
+    <div class="item4">
+        <h2>TOP 10 tipo de prenda</h2>
     </div>
 </div>
