--- a/src/app/components/productos/productos.component.html
+++ b/src/app/components/productos/productos.component.html
@@ -87,7 +87,9 @@
         </div>
     </div>
 
-    <router-outlet></router-outlet>
     <br>
-
+    <div class="container-fluid">
+        <router-outlet></router-outlet>
+    </div>
+    
 </div>
