--- a/src/app/components/productos/cat-hombre/cat-hombre.component.css
+++ b/src/app/components/productos/cat-hombre/cat-hombre.component.css
@@ -78,7 +78,6 @@
   display: grid;
   gap: 5px;
   width: 100%;
-  height: 1000px;
   grid-template-columns: 75% 25%;
   margin-bottom: 20px;
 }
@@ -88,31 +87,75 @@
   grid-template-columns: 50% 50%;
 }
 
+.grid-container-item2 {
+  display: grid;
+  grid-template-columns: 98% 2%;
+}
+
 .item1 {
   border-radius: 8px;
 }
 
 .item2 {
-  background-color: darkviolet;
   border-radius: 8px;
 }
 
 .item3 {
-  background-color: coral;
   border-radius: 8px;
   margin-right: 12px;
   grid-area: 1 / 2 / 3 / 3;
 }
 
-.item1-1 {
-  background-color: #212121;
+
+.imgMan {
+  width: 130px;
+  height: 130px;
+}
+
+.imgPrendas {
+  width: 50px;
+  height: 50px;
+  margin-bottom: 15px;
+}
+
+.item1-1-content {
+  background-color: #dfdfdf;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+  padding: 15px;
+}
+
+.item1-2-content {
+  background-color: #dfdfdf;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  margin: 0px auto;
+  text-align: center;
+}
+
+.item2-content {
+  background-color: #dfdfdf;
+  height: auto;
+  text-align: center;
+  margin: 0 auto;
+  height: 250px;
+  padding-top: 125px;
   border-radius: 8px;
 }
 
-.item1-2 {
-  background-color: aqua;
-  border-radius: 8px;
+.item2-2-img {
+  display: inline-block;
+  margin: 15px 20px 5px 20px;
 }
+
+.colorx {
+  background-color: rgb(62, 86, 184);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin: 0 auto;
+}
+
 
 @media screen and (max-width: 1000px) {
   .grid-container {
@@ -121,27 +164,6 @@
 
   .grid-container-item1 {
     display: block;
-  }
-
-  .item1 {
-    width: 100%;
-    height: auto;
-    margin-bottom: 0px;
-  }
-
-  .item2 {
-    width: 100%;
-    height: auto;
-  }
-
-  .item3 {
-    width: 100%;
-    height: auto;
-  }
-
-  .item4 {
-    width: 100%;
-    height: auto;
   }
 }
 
@@ -168,3 +190,80 @@ a.sel2.activo::before {
   border-radius: 50%;
   background: #358da3;
 }
+
+/* Tablas */
+.table-container-colores {
+  width: 100%;
+  max-width: auto;
+  margin: auto;
+}
+
+table {
+  width: 100%;
+  background-color: white;
+  border-collapse: collapse;
+  text-align: left;
+  margin: 0;
+  padding: 0;
+  table-layout: fixed;
+}
+
+th, td{
+  padding: 7px;
+}
+
+thead{
+  background-color: #cecece;
+  border-bottom: solid 1px #919090;
+  color: #000000;
+}
+
+tr:nth-child(even){
+  background-color: #ddd;
+}
+
+tr:hover td {
+  background-color:#358da3;
+  color: white;
+}
+
+.dif {
+  color: green;
+}
+
+.imgPrendasTabla {
+  width: 30px;
+  height: 30px;
+}
+
+/* Responsive tables*/
+@media screen and (max-width: 600px) {
+  table {
+    border: 0px;
+  }
+
+  thead {
+    display: none;
+  }
+
+  tr {
+    margin-bottom: 8px;
+    display: block;
+  }
+
+  td {
+    text-align: right;
+    display: block;
+  }
+
+  td:last-child {
+    border-bottom: 0px;
+  }
+
+  td::before {
+    content: attr(data-label);
+    font-weight: bold;
+    float: left;
+  }
+}
+/* Fin Tablas */
