--- a/src/app/components/productos/cat-mujer/cat-mujer.component.css
+++ b/src/app/components/productos/cat-mujer/cat-mujer.component.css
@@ -78,7 +78,6 @@
   display: grid;
   gap: 5px;
   width: 100%;
-  height: 500px;
   grid-template-columns: 75% 25%;
   margin-bottom: 20px;
 }
@@ -141,6 +140,7 @@
   margin: 0 auto;
   height: 250px;
   padding-top: 125px;
+  border-radius: 8px;
 }
 
 .item2-2-img {
