--- a/src/app/components/productos/general/general.component.css
+++ b/src/app/components/productos/general/general.component.css
@@ -37,6 +37,13 @@
   font-weight: bold;
 }
 
+.itemsModal {
+  color: #212121;
+  font-weight: bold;
+  text-decoration: underline;
+  margin-bottom: 0px;
+}
+
 .container-scroll {
   height: 250px;
 }
