--- a/src/app/components/productos/cat-hombre/cat-hombre.component.css
+++ b/src/app/components/productos/cat-hombre/cat-hombre.component.css
@@ -37,6 +37,13 @@
   font-weight: bold;
 }
 
+.itemsModal {
+  color: #212121;
+  font-weight: bold;
+  text-decoration: underline;
+  margin-bottom: 0px;
+}
+
 .container-scroll {
   height: 250px;
 }
@@ -165,6 +172,14 @@
 
   .grid-container-item1 {
     display: block;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .imgPrendas {
+    width: 55px;
+    height: 55px;
+    margin-bottom: 15px;
   }
 }
 
