--- a/src/app/components/productos/general/general.component.css
+++ b/src/app/components/productos/general/general.component.css
@@ -187,6 +187,13 @@
   }
 }
 
+@media screen and (min-width: 1440px) {
+  .imgPrendas {
+    width: 55px;
+    height: 55px;
+    margin-bottom: 15px;
+  }
+}
 
 /* clases del routing */
 .activo {
