implementamos charts mujeres

--- a/src/app/components/productos/cat-hombre/cat-hombre.component.html
+++ b/src/app/components/productos/cat-hombre/cat-hombre.component.html
@@ -486,7 +486,7 @@
     </div>
     <div class="item2-content">
       <div class="chart-line">
-        <canvas id="myChart"></canvas>
+        <canvas id="myChartHombre"></canvas>
       </div>
     </div>
   </div>
