--- a/src/app/components/productos/cat-kids/cat-kids.component.css
+++ b/src/app/components/productos/cat-kids/cat-kids.component.css
@@ -144,8 +144,6 @@
   height: auto;
   text-align: center;
   margin: 0 auto;
-  height: 250px;
-  padding-top: 125px;
   border-radius: 8px;
 }
 
@@ -281,3 +279,12 @@ tr:hover td {
   }
 }
 /* Fin Tablas */
+
+.chart-line {
+  width: 100%;
+}
+
+canvas {
+  width: 80%;
+  height: 100%;
+}
