--- a/src/app/components/productos/cat-mujer/cat-mujer.component.html
+++ b/src/app/components/productos/cat-mujer/cat-mujer.component.html
@@ -293,7 +293,9 @@
             </ng-template>
         </div>
         <div class="item2-content">
-            Chart de colores
+            <div class="chart-line">
+                <canvas id="myChartMujer"></canvas>
+            </div>
         </div>
     </div>
 
