implementacion chart colores general

--- a/src/app/components/productos/general/general.component.html
+++ b/src/app/components/productos/general/general.component.html
@@ -287,7 +287,9 @@
             </ng-template>
         </div>
         <div class="item3-content">
-            <h3>Chart de colores</h3>
+            <div class="chart-line">
+                <canvas id="myChartGeneral"></canvas>
+            </div>
         </div>
     </div>
 
@@ -432,7 +434,7 @@
             </ng-template>
         </div>
         <div class="item3-content">
-            <h3>Tabla o Chart para los materiales?</h3>
+         
         </div>
     </div>
 
