--- a/src/app/components/informes/informe-sku/informe-sku.component.html
+++ b/src/app/components/informes/informe-sku/informe-sku.component.html
@@ -128,8 +128,8 @@
           </ul>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" (click)="closeModal()">Cerrar</button>
-          <button type="button" class="btn btn-primary" (click)="applyFilter()">Aplicar filtros</button>
+          <button type="button" class="btn btn-danger" (click)="clearFilters()">Limpiar filtros</button>
+          <button type="button" class="btn btn-primary" (click)="closeModal()">Cerrar</button>
         </div>
       </ng-template>
     </div>
@@ -273,8 +273,8 @@
         </ul>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" (click)="closeModal2()">Cerrar</button>
-        <button type="button" class="btn btn-primary" (click)="applyFilter2()">Aplicar filtros</button>
+        <button type="button" class="btn btn-danger" (click)="clearFilters2()">Limpiar filtros</button>
+        <button type="button" class="btn btn-primary" (click)="closeModal2()">Cerrar</button>
       </div>
     </ng-template>
   </div>
