se implementa el chart de torta en vista generales

--- a/src/app/components/productos/general/general.component.html
+++ b/src/app/components/productos/general/general.component.html
@@ -109,7 +109,9 @@
         <div>
             <h2>Categorías</h2>
             <div class="item1-1-content items">
-                <h3>Chart Categoria</h3>
+                <div class="chart-line">
+                    <canvas id="myChartPie"></canvas>
+                </div>
             </div>
         </div>
         <div>
