Se homologan los materiales(Composición) y se agrega al filtro Cards

--- a/src/app/components/informes/informes.component.html
+++ b/src/app/components/informes/informes.component.html
@@ -209,15 +209,18 @@
               </li>
 
               <li class="active mt-2">
-                <a href="#filterMaterials" data-toggle="collapse" aria-expanded="false"
-                  class="dropdown-toggle menu-color">Composición
+                <a href="#filterComposicion" data-toggle="collapse" aria-expanded="false"
+                  class="dropdown-toggle menu-color">Composicion
                 </a>
-                <ul class="collapse list-unstyled" id="filterMaterials">
+                <ul class="collapse list-unstyled" id="filterComposicion">
                   <div class="overflow-auto container-scroll">
-                    <li *ngFor="let e of materials">
+                    <li *ngFor="let composicion of composicionData">
                       <label class="control control--checkbox">
-                        <input type="checkbox" class="ml-2" /></label>
-                      {{e.materiales}}
+                        <input class="composicion" type="checkbox" value="{{composicion.value}}" name="{{composicion.value}}"
+                          (change)="validateCheckFilter($event.target.checked, composicion, $event.target.className, $event.target)"
+                          id="{{composicion.value}}" />
+                        {{composicion.text}}
+                      </label>
                     </li>
                   </div>
                 </ul>
